<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_gesture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GestureSetting"
            android:textColor="#2AABEE"
            android:textSize="26dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gesture_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/gesture_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_gesture_title">

            <TextView
                android:id="@+id/tv_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:text="@string/StepOne" />


            <TextView
                android:id="@+id/tv_gesture_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18dp"
                tools:text="@string/CommonGestureLookAgainText" />

        </LinearLayout>


        <com.neutec.customgestureview.view.GestureLockView
            android:id="@+id/gesture_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            app:error_color="#ED4446"
            app:is_use_vibrate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:normal_color="#808080"
            app:pressed_color="#2AABEE" />

        <TextView
            android:id="@+id/tv_redraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius_20dp_blue"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Redraw"
            android:textColor="#FFF"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gesture_view" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius_20dp_gray"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/ForgotGesture"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gesture_view" />

        <!--    <TextView-->
        <!--        android:id="@+id/tv_setting"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:background="@drawable/bg_radius_20dp_blue"-->
        <!--        android:paddingStart="15dp"-->
        <!--        android:paddingTop="5dp"-->
        <!--        android:paddingEnd="15dp"-->
        <!--        android:paddingBottom="5dp"-->
        <!--        android:text="@string/Setting"-->
        <!--        android:textColor="#FFF"-->
        <!--        android:textSize="18dp"-->
        <!--        android:visibility="gone"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/tv_forgot"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/gesture_view" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
